-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
Meet this when running racer
LustreError: 9522:0:(lod_object.c:574:lod_striped_it_next()) ASSERTION( next->do_index_ops != ((void *)0) ) failed: LustreError: 9522:0:(lod_object.c:574:lod_striped_it_next()) LBUG Pid: 9522, comm: mdt01_010 Call Trace: [<ffffffffa05d5885>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] [<ffffffffa05d5e87>] lbug_with_loc+0x47/0xb0 [libcfs] [<ffffffffa0af9696>] lod_striped_it_next+0x4d6/0x630 [lod] [<ffffffffa0af7d59>] ? lod_striped_it_get+0x139/0x280 [lod] [<ffffffffa1006c1b>] mdd_may_delete+0x4eb/0x920 [mdd] [<ffffffffa100c5a2>] mdd_rename_sanity_check+0xb2/0x230 [mdd] [<ffffffffa101595a>] mdd_rename+0x37a/0x1e30 [mdd] [<ffffffffa107c5eb>] ? mdt_object_local_lock+0x1bb/0xa80 [mdt] [<ffffffffa10700d0>] ? mdt_blocking_ast+0x0/0x2a0 [mdt] [<ffffffffa0910ee0>] ? ldlm_completion_ast+0x0/0x9b0 [ptlrpc] [<ffffffffa0f1c2c4>] ? osd_xattr_get+0x84/0x2a0 [osd_ldiskfs] [<ffffffffa1091375>] mdt_reint_rename_internal+0x1305/0x1a50 [mdt] [<ffffffffa1091cad>] mdt_reint_rename_or_migrate+0x1ed/0x2730 [mdt] [<ffffffffa0979de4>] ? null_alloc_rs+0xb4/0x320 [ptlrpc] [<ffffffffa0979dfd>] ? null_alloc_rs+0xcd/0x320 [ptlrpc] [<ffffffff8153243e>] ? _spin_unlock+0xe/0x10 [<ffffffffa0732f73>] ? upcall_cache_get_entry+0x3c3/0x8a0 [obdclass] [<ffffffffa0737f00>] ? lu_ucred+0x20/0x30 [obdclass] [<ffffffffa106f245>] ? mdt_ucred+0x15/0x20 [mdt] [<ffffffffa108865c>] ? mdt_root_squash+0x2c/0x3f0 [mdt] [<ffffffffa09652a2>] ? __req_capsule_get+0x162/0x6e0 [ptlrpc] [<ffffffff8129828a>] ? strlcpy+0x4a/0x60 [<ffffffffa1094223>] mdt_reint_rename+0x13/0x20 [mdt] [<ffffffffa108c79d>] mdt_reint_rec+0x5d/0x200 [mdt] [<ffffffffa1075bdb>] mdt_reint_internal+0x62b/0xa40 [mdt] [<ffffffffa107648b>] mdt_reint+0x6b/0x120 [mdt] [<ffffffffa09a3992>] tgt_request_handle+0xa42/0x1230 [ptlrpc] [<ffffffffa094f454>] ptlrpc_main+0xd74/0x1850 [ptlrpc] [<ffffffffa094e6e0>] ? ptlrpc_main+0x0/0x1850 [ptlrpc] [<ffffffff8109ea9e>] kthread+0x9e/0xc0 [<ffffffff8100c24a>] child_rip+0xa/0x20 [<ffffffff8109ea00>] ? kthread+0x0/0xc0 [<ffffffff8100c240>] ? child_rip+0x0/0x20 LustreError: dumping log to /tmp/lustre-log.1439092245.9522
- is related to
-
LU-6831 The ticket for tracking all DNE2 bugs
-
- Reopened
-