LU-6977 lod: do_index_try should be called first

In lod_striped_it_next do_index_try should be called first
to initialize do_index_ops, then checking do_index_ops.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I477fb3c9ccd65c4e7721d78a3746f64acf8733ce
Reviewed-on: http://review.whamcloud.com/15972
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>